re PR c++/58550 (][c++11] ICE with auto in function return type and lto)

PR c++/58550
	* decl.c (grokdeclarator): Turn pedwarn about auto return type in
	c++11 into error.

From-SVN: r207055