gcc/testsuite/g++.dg/cpp0x/auto41.C
@@ -1,0 +1,5 @@
+// PR c++/58550
+// { dg-options "-std=c++11" }
+
+auto foo();			// { dg-error "auto" }
+auto fp = foo;
